// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmissionsTable component component render tests snapshots snapshot: empty (no list data) 1`] = `null`;

exports[`SubmissionsTable component component render tests snapshots snapshot: happy path 1`] = `
<div
  className="submissions-table"
>
  <DataTable
    FilterStatusComponent={[MockFunction FilterStatusComponent]}
    bulkActions={
      [
        <mockConstructor
          handleClick={[Function]}
        />,
      ]
    }
    columns={
      [
        {
          "Header": "Username",
          "accessor": "username",
        },
        {
          "Cell": [Function],
          "Header": "Learner submission date",
          "accessor": "dateSubmitted",
          "disableFilters": true,
        },
        {
          "Cell": [Function],
          "Header": "Grade",
          "accessor": "score",
          "disableFilters": true,
        },
        {
          "Cell": [Function],
          "Filter": "MultiSelectDropdownFilter",
          "Header": "Grading status",
          "accessor": "gradingStatus",
          "filter": "includesValue",
          "filterChoices": [
            {
              "name": "Ungraded",
              "value": "ungraded",
            },
            {
              "name": "Grading Completed",
              "value": "graded",
            },
            {
              "name": "Currently being graded by someone else",
              "value": "locked",
            },
            {
              "name": "You are currently grading this response",
              "value": "in-progress",
            },
          ],
        },
      ]
    }
    data={
      [
        {
          "dateSubmitted": "2021-12-08 09:06:15.319213+00:00",
          "gradingStatus": "ungraded",
          "score": {
            "pointsEarned": 1,
            "pointsPossible": 10,
          },
          "username": "username-1",
        },
        {
          "dateSubmitted": "2021-12-10 18:06:15.319213+00:00",
          "gradingStatus": "graded",
          "score": {
            "pointsEarned": 2,
            "pointsPossible": 10,
          },
          "username": "username-2",
        },
        {
          "dateSubmitted": "2021-12-11 07:06:15.319213+00:00",
          "gradingStatus": "in-progress",
          "score": {
            "pointsEarned": 3,
            "pointsPossible": 10,
          },
          "username": "username-3",
        },
      ]
    }
    data-testid="data-table"
    defaultColumnValues={
      {
        "Filter": "TextFilter",
      }
    }
    initialState={
      {
        "pageIndex": 0,
        "pageSize": 10,
      }
    }
    isFilterable={true}
    isPaginated={true}
    isSelectable={true}
    isSortable={true}
    itemCount={3}
    numBreakoutFilters={2}
    tableActions={
      [
        <mockConstructor
          handleClick={[Function]}
        />,
      ]
    }
  >
    <DataTable.TableControlBar />
    <DataTable.Table />
    <DataTable.TableFooter />
  </DataTable>
</div>
`;

exports[`SubmissionsTable component component render tests snapshots snapshot: team happy path 1`] = `
<div
  className="submissions-table"
>
  <DataTable
    FilterStatusComponent={[MockFunction FilterStatusComponent]}
    bulkActions={
      [
        <mockConstructor
          handleClick={[Function]}
        />,
      ]
    }
    columns={
      [
        {
          "Header": "Team name",
          "accessor": "teamName",
        },
        {
          "Cell": [Function],
          "Header": "Team submission date",
          "accessor": "dateSubmitted",
          "disableFilters": true,
        },
        {
          "Cell": [Function],
          "Header": "Grade",
          "accessor": "score",
          "disableFilters": true,
        },
        {
          "Cell": [Function],
          "Filter": "MultiSelectDropdownFilter",
          "Header": "Grading status",
          "accessor": "gradingStatus",
          "filter": "includesValue",
          "filterChoices": [
            {
              "name": "Ungraded",
              "value": "ungraded",
            },
            {
              "name": "Grading Completed",
              "value": "graded",
            },
            {
              "name": "Currently being graded by someone else",
              "value": "locked",
            },
            {
              "name": "You are currently grading this response",
              "value": "in-progress",
            },
          ],
        },
      ]
    }
    data={
      [
        {
          "dateSubmitted": "2021-12-08 09:06:15.319213+00:00",
          "gradingStatus": "ungraded",
          "score": {
            "pointsEarned": 1,
            "pointsPossible": 10,
          },
          "teamName": "teamName-1",
        },
        {
          "dateSubmitted": "2021-12-10 18:06:15.319213+00:00",
          "gradingStatus": "graded",
          "score": {
            "pointsEarned": 2,
            "pointsPossible": 10,
          },
          "teamName": "teamName-2",
        },
        {
          "dateSubmitted": "2021-12-11 07:06:15.319213+00:00",
          "gradingStatus": "in-progress",
          "score": {
            "pointsEarned": 3,
            "pointsPossible": 10,
          },
          "teamName": "teamName-3",
        },
      ]
    }
    data-testid="data-table"
    defaultColumnValues={
      {
        "Filter": "TextFilter",
      }
    }
    initialState={
      {
        "pageIndex": 0,
        "pageSize": 10,
      }
    }
    isFilterable={true}
    isPaginated={true}
    isSelectable={true}
    isSortable={true}
    itemCount={3}
    numBreakoutFilters={2}
    tableActions={
      [
        <mockConstructor
          handleClick={[Function]}
        />,
      ]
    }
  >
    <DataTable.TableControlBar />
    <DataTable.Table />
    <DataTable.TableFooter />
  </DataTable>
</div>
`;
